--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,12 @@ services:
   topic-generation-service:
     image: topic-generation-img
     container_name: topic-generation-container
-    command: ["/bin/bash", "-c", "nvidia-smi; nvcc --version; python --version; echo 'Hello World'; tail -f /dev/null"]
+    command: ["/bin/bash", "-c", "nvidia-smi; nvcc --version; source /opt/conda/bin/activate topic_generation_env; python --version; echo 'Hello World'; tail -f /dev/null"]
     build:
       context: .
       dockerfile: Dockerfile
+    volumes:
+      - "./:/code"
     deploy:
       resources:
         reservations:
